# TNP

./: .gitignore  pyproject.toml
backend/: app.py
backend/dev_loggers/: __init__.py  logging_config.py  monitor_face_detection.py
backend/prompt_engineering/: image_gen.py  personalities.py
backend/services/: __init__.py  camera_service.py  chat_service.py  image_service.py  memory_service.py  voice_service.py
frontend/: package-lock.json  package.json
frontend/public/: manifest.json
frontend/src/: App.css  App.js  VoiceInput.js
frontend/src/components/: FaceDetector.js  ModelSelector.js  SettingsMenu.css  SettingsMenu.js
frontend/src/styles/: ModelSelector.css
